fix font and address

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name="referrer" content="no-referrer">   -->
     <title>Genium</title>
-    <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Economica:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -34,9 +34,7 @@
       <hr />
       <div class="left-footer">
         <p>Genium Essays</p>
-        <p>269 Henry Street
-            <br>Brooklyn
-            <br>NY 11201
+        <p>Brooklyn - New York
         </p>
       </div>
       <div class="center-footer">
