added email link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Genium</title>
     <link href="https://fonts.googleapis.com/css2?family=Economica:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <div class="container">
@@ -36,6 +38,10 @@
         <p>Genium Essays</p>
         <p>Brooklyn - New York
         </p>
+        <p>
+          <a href="mailto:info@geniumessays.com" class="email-link">
+            <i class="fa fa-envelope"></i> info@geniumessays.com
+          </a>
       </div>
       <div class="center-footer">
         <p>COPYRIGHT © 2025 GENUIM INC - ALL RIGHTS RESERVED.</p>
