add button to try the beta

--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
               <button type="submit">Join Waitlist</button>
             </div>
           </form>
+          <div class="form-wrapper">
+            <button id="playground-button" onclick="window.location.href='https://playground.geniumessays.com'">
+                Try the beta!
+            </button>
+        </div>
           <p id="confirmation-message">XXX</p>
         </div>
+
     </div>
     <footer class="footer">
       <hr />
